# softac

./: .gitignore  README.md  pyproject.toml
softac/: SoftActorCritic.py  __init__.py  archive.py  sac.py
softac/buffers/: Buffer.py
softac/functions/: __init__.py  hard_update.py  hard_update_all.py  optimizer_step.py  soft_update.py  soft_update_all.py
softac/modules/: Actor.py  Critic.py
